# Tiresias

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyrightconfig.json
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/api/: main.py
backend/lineage/: __init__.py  graph.py
backend/memory/: __init__.py  fingerprint.py
backend/oracle/: __init__.py  inference.py
backend/tests/: conftest.py  test_fingerprint.py  test_lineage.py
backend/tests/fixtures/: manifest.json
backend/tiresias/: __init__.py  fivetran_rest.py  github_client.py  mcp_client.py  orchestrator.py  slack_client.py
config/: watched_tables.yaml
dbt/: dbt_project.yml
dbt/models/marts/: fct_pipeline_by_stage.sql
dbt/models/staging/: stg_deals.sql
docs/: e2e_verification.md  lineage.md  scenario.md
frontend/: tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/lineage/: route.ts
frontend/app/api/verdicts/: route.ts
frontend/app/api/vp-pipeline/: route.ts
frontend/app/monitor/: page.tsx
frontend/app/vp-dashboard/: page.tsx
frontend/components/: ActivityLog.tsx  ConnectorHealthPanel.tsx  LineageGraph.tsx  MonitoringDataPanel.tsx  RiskForecast.tsx  VerdictPanel.tsx
frontend/lib/: types.ts
infra/: bigquery_schema.sql  setup.sh
mcp/: README.md
scripts/: capture_baseline.py  phase1_e2e.py  reenable_table.py  reset_risk_history.py  run_e2e.py  run_oracle.py  seed_demo.py  setup_demo_risk_state.py  trigger_failure.py  trigger_webhook.py
seed_data/: IMPORT_INSTRUCTIONS.md
(+8 files in other folders)
